--- a/templates/booking/manage.html.twig
+++ b/templates/booking/manage.html.twig
@@ -1,38 +1,44 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
-		<h1>Gérer mes réservations</h1>
-		{% if bookings is empty %}
-			<p>Aucune réservation en cours.</p>
-			<a href="{{ path('calendar') }}" class="btn btn-primary btn-sm">Réserver</a>
-		{% else %}
-			<form method="post" action="{{ path('booking_cancel_multiple') }}">
-				<table class="table table-bordered">
-					<thead class="thead-light">
+<div class="container">
+	<h1>Gérer mes réservations</h1>
+	{% if bookings is empty %}
+		<p>Aucune réservation en cours.</p>
+		<a href="{{ path('calendar') }}" class="btn btn-primary btn-sm">Réserver</a>
+	{% else %}
+		<form method="post" action="{{ path('booking_cancel_multiple') }}">
+			<table class="table table-bordered">
+				<thead class="thead-light">
+					<tr>
+						<th>Annulation</th>
+						<th>Cours</th>
+						<th>Date et Heure de Début</th>
+						<th>Date et Heure de Fin</th>
+						<th>Récurrent</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for booking in bookings %}
+						{% set interval = (booking.course.startTime|date('U') - "now"|date('U')) // 86400 %}
 						<tr>
-							<th></th>
-							<th>Cours</th>
-							<th>Date et Heure de Début</th>
-							<th>Date et Heure de Fin</th>
-							<th>Récurrent</th>
+							<td>
+								{% if interval >= 3 %}
+									<input type="checkbox" name="bookingIds[]" value="{{ booking.id }}">
+								{% else %}
+									<span class="text-muted">Annulation impossible</span>
+								{% endif %}
+							</td>
+							<td>{{ booking.course.name }}</td>
+							<td>{{ booking.course.startTime|date('d/m/Y H:i') }}</td>
+							<td>{{ booking.course.endTime|date('d/m/Y H:i') }}</td>
+							<td>{{ booking.isRecurrent ? 'Oui' : 'Non' }}</td>
 						</tr>
-					</thead>
-					<tbody>
-						{% for booking in bookings %}
-							<tr>
-								<td><input type="checkbox" name="bookingIds[]" value="{{ booking.id }}"></td>
-								<td>{{ booking.course.name }}</td>
-								<td>{{ booking.course.startTime|date('d/m/Y H:i') }}</td>
-								<td>{{ booking.course.endTime|date('d/m/Y H:i') }}</td>
-								<td>{{ booking.isRecurrent ? 'Oui' : 'Non' }}</td>
-							</tr>
-						{% endfor %}
 					</tbody>
-				</table>
-				<button type="submit" class="btn btn-danger btn-sm">Annuler les réservations sélectionnées</button>
-				<a class="btn btn-primary btn-sm" href="{{ path('calendar') }}" role="button">Réserver</a>
-			</form>
-		{% endif %}
-	</div>
-{% endblock %}
+				</tbody>
+			</tr>
+		{% endfor %}
+	</tbody>
+</table>
+<button type="submit" class="btn btn-danger btn-sm">Annuler les réservations sélectionnées</button>
+<a class="btn btn-primary btn-sm" href="{{ path('calendar') }}" role="button">Réserver</a></form>{% endif %}</div>{% endblock %}
