--- a/templates/coach/list.html.twig
+++ b/templates/coach/list.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-5">
+	<div class="container">
 		<h1>Liste des Coachs</h1>
 
 		{% if is_granted('ROLE_ADMIN') %}
