--- a/templates/course_details/list.html.twig
+++ b/templates/course_details/list.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container mt-5">
-    <h1>Liste des Cours</h1>
+<div class="container">
+    <h1>Liste des activités</h1>
     {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('course_details_new') }}" class="btn btn-primary mb-3">Ajouter un nouveau cours</a>
+        <a href="{{ path('course_details_new') }}" class="btn btn-primary mb-3">Ajouter une activité</a>
     {% endif %}
     <div class="row">
         {% for course in courseDetails %}
             <div class="col-md-4 mb-3">
                 <div class="card">
-                    {% if course.image %}
-                        <img src="{{ asset('uploads/' ~ course.image) }}" class="card-img-top" alt="{{ course.name }}">
+                    {% if course.photo %}
+                        <img src="{{ asset('uploads/photos/' ~ course.photo) }}" class="card-img-top" alt="{{ course.name }}">
                     {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">{{ course.name }}</h5>
