--- a/templates/photo/add.html.twig
+++ b/templates/photo/add.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container mt-5">
-        <h1>Ajouter une photo</h1>
+        <h1>Ajouter des photos</h1>
         {{ form_start(photoForm) }}
             {{ form_row(photoForm.title) }}
             {{ form_row(photoForm.imagePath) }}
