--- a/templates/course_details/edit.html.twig
+++ b/templates/course_details/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container mt-5">
-    <h1>Modifier le cours</h1>
+    <h1>Modifier l'activité</h1>
 
     {{ form_start(form) }}
     <div class="form-group">
@@ -14,9 +14,9 @@
         {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
     </div>
     <div class="form-group">
-        {{ form_label(form.image, null, {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
-    </div>
+			{{ form_label(form.photo) }}
+			{{ form_widget(form.photo, {'attr': {'class': 'form-control-file'}}) }}
+		</div>
     <div class="form-group">
         {{ form_label(form.defaultCapacity, null, {'label_attr': {'class': 'form-label'}}) }}
         {{ form_widget(form.defaultCapacity, {'attr': {'class': 'form-control'}}) }}
