--- a/templates/course_details/new.html.twig
+++ b/templates/course_details/new.html.twig
@@ -1,29 +1,29 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container mt-5">
-    <h1>Ajouter un nouveau cours</h1>
+	<div class="container mt-5">
+		<h1>Créer une activité</h1>
 
-    {{ form_start(form) }}
-    <div class="form-group">
-        {{ form_label(form.name, null, {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group">
-        {{ form_label(form.description, null, {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group">
-        {{ form_label(form.image, null, {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <div class="form-group">
-        {{ form_label(form.defaultCapacity, null, {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.defaultCapacity, {'attr': {'class': 'form-control'}}) }}
-    </div>
-    <button type="submit" class="btn btn-primary">Enregistrer</button>
-    {{ form_end(form) }}
+		{{ form_start(form) }}
+		<div class="form-group">
+			{{ form_label(form.name, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+		</div>
+		<div class="form-group">
+			{{ form_label(form.description, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+		</div>
+		<div class="form-group">
+			{{ form_label(form.photo) }}
+			{{ form_widget(form.photo, {'attr': {'class': 'form-control-file'}}) }}
+		</div>
+		<div class="form-group">
+			{{ form_label(form.defaultCapacity, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.defaultCapacity, {'attr': {'class': 'form-control'}}) }}
+		</div>
+		<button type="submit" class="btn btn-primary">Enregistrer</button>
+		{{ form_end(form) }}
 
-    <a href="{{ path('course_details_list') }}" class="btn btn-secondary mt-3">Annuler</a>
-</div>
+		<a href="{{ path('course_details_list') }}" class="btn btn-secondary mt-3">Annuler</a>
+	</div>
 {% endblock %}
