--- a/templates/event/edit.html.twig
+++ b/templates/event/edit.html.twig
@@ -33,10 +33,9 @@
             {{ form_errors(form.location) }}
         </div>
         <div class="form-group">
-            {{ form_label(form.image) }}
-            {{ form_widget(form.image, {'attr': {'class': 'form-control-file'}}) }}
-            {{ form_errors(form.image) }}
-        </div>
+			{{ form_label(form.photo) }}
+			{{ form_widget(form.photo, {'attr': {'class': 'form-control-file'}}) }}
+		</div>
         <button type="submit" class="btn btn-primary">Enregistrer</button>
         {{ form_end(form) }}
 
