--- a/templates/pricing/index.html.twig
+++ b/templates/pricing/index.html.twig
@@ -9,7 +9,7 @@
     }
 </style>
 
-<div class="container mt-5">
+<div class="container">
     <h1>Nos Tarifs 2024/2025</h1>
 
     <div class="row">
