--- a/templates/booking/new.html.twig
+++ b/templates/booking/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Réserver le cours{% endblock %}
 
 {% block body %}
-<div class="container mt-5">
+<div class="container mt-5 reserver">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
                     <h1 class="card-title">Réserver le cours : {{ course.name }}</h1>
@@ -18,11 +18,11 @@
                     </div>
                     <div id="num-occurrences-container" class="form-group" style="display: none;">
                         {{ form_label(form.numOccurrences, null, {'label_attr': {'class': 'form-label'}}) }}
-                        {{ form_widget(form.numOccurrences, {'attr': {'class': 'form-control js-num-occurrences'}}) }}
+                        {{ form_widget(form.numOccurrences, {'attr': {'class': 'form-control js-num-occurrences w-25'}}) }}
                         <button type="button" class="btn btn-secondary mt-2" id="max-occurrences-button">Max ({{ remaining_courses }})</button>
                     </div>
                     {{ form_rest(form) }}
-                    <button type="submit" class="btn btn-primary btn-block">Réserver</button>
+                    <button type="submit" class="btn btn-primary btn-block mt-3">Réserver</button>
                     {{ form_end(form) }}
                     <a href="{{ path('calendar') }}" class="btn btn-secondary btn-block mt-3">Retour au calendrier</a>
                 </div>
