--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -36,7 +36,7 @@
 			{% else %}
 				<button class="btn btn-secondary" disabled>&laquo;</button>
 			{% endif %}
-			<a href="{{ path('calendar', { 'year': 'now'|date('Y'), 'week': 'now'|date('W') }) }}" class="btn btn-success">Aujourd'hui</a>
+			<a href="{{ path('calendar', { 'year': 'now'|date('Y'), 'week': 'now'|date('W') }) }}" class="btn btn-success">Semaine en cours</a>
 			<a href="{{ path('calendar', { 'year': nextYear, 'week': nextWeek }) }}" class="btn btn-primary">&raquo;</a>
 			{% if is_granted('ROLE_ADMIN') %}
 				<a href="{{ path('course_new') }}" class="btn btn-success">Créer un cours</a>
@@ -123,9 +123,9 @@
 														{% else %}
 															{% if available_spots > 0 %}
 																<span class="mt-3">
-																	{{ bookings_count }}
-																	/
-																	{{ course_capacity }}
+																	{# {{ bookings_count }}
+																	/ #}
+																	{{ course_capacity - bookings_count }} places restantes
 																</span>
 																<br>
 																<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn btn-primary btn-sm mt-2">Réserver</a>
