--- a/templates/plan/list.html.twig
+++ b/templates/plan/list.html.twig
@@ -1,29 +1,43 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container mt-5">
-    <h1 class="mb-4">Forfaits</h1>
-    <a href="{{ path('plan_new') }}" class="btn btn-success mb-3">Ajouter un nouveau forfait</a>
-    <div class="list-group">
-        {% for plan in plans %}
-            <div class="list-group-item mb-3">
-                <h5 class="mb-1">{{ plan.name }}</h5>
-                <p class="mb-1">
-                    Durée: {{ plan.duration }} <br>
-                    ID du prix Stripe: {{ plan.stripePriceId }}
-                </p>
-                <h6 class="mt-3">Cours inclus :</h6>
-                <ul class="list-group mb-3">
-                    {% for planCourse in plan.planCourses %}
-                        <li class="list-group-item">
-                            {{ planCourse.course.name }} - {{ planCourse.credits }} crédits
-                        </li>
-                    {% endfor %}
-                </ul>
-                <a href="{{ path('plan_edit', {'id': plan.id}) }}" class="btn btn-primary btn-sm">Modifier</a>
-                <a href="{{ path('plan_delete', {'id': plan.id}) }}" class="btn btn-danger btn-sm">Supprimer</a>
-            </div>
-        {% endfor %}
-    </div>
-</div>
+	<div class="container mt-3">
+		<div class="col-md-9 mx-auto">
+			<div class="card">
+				<div class="card-body">
+					<h1 class="mb-1">Forfaits</h1>
+					{% if is_granted('ROLE_ADMIN') %}
+						<a href="{{ path('plan_new') }}" class="btn btn-success mb-3">Ajouter un nouveau forfait</a>
+					{% endif %}
+					<div class="list-group">
+						{% for plan in plans %}
+							<div class="list-group-item mb-3">
+								<h5 class="mb-1">{{ plan.name }}</h5>
+								<p class="mb-1">
+									Durée:
+									{{ plan.duration }}
+									<br>
+									ID du prix Stripe:
+									{{ plan.stripePriceId }}
+								</p>
+								<h6 class="mt-3">Cours inclus :</h6>
+								<ul class="list-group mb-3">
+									{% for planCourse in plan.planCourses %}
+										<li class="list-group-item">
+											{{ planCourse.course.name }}
+											-
+											{{ planCourse.credits }}
+											crédits
+										</li>
+									{% endfor %}
+								</ul>
+								<a href="{{ path('plan_edit', {'id': plan.id}) }}" class="btn btn-primary btn-sm">Modifier</a>
+								<a href="{{ path('plan_delete', {'id': plan.id}) }}" class="btn btn-danger btn-sm">Supprimer</a>
+							</div>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
