--- a/templates/planning/edit.html.twig
+++ b/templates/planning/edit.html.twig
@@ -1,36 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier le Planning{% endblock %}
+{% block title %}Modifier le Planning
+{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <h1>Modifier le Planning</h1>
+	<div class="container mt-5">
+		<div class="col-md-12 w-50 mx-auto">
+			<div class="card">
+				<div class="card-body">
+					<h1>Modifier le Planning</h1>
 
-        {{ form_start(form) }}
-            <div class="form-group">
-                {{ form_label(form.day) }}
-                {{ form_widget(form.day, {'attr': {'class': 'form-control'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.startTime) }}
-                {{ form_widget(form.startTime, {'attr': {'class': 'form-control'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.endTime) }}
-                {{ form_widget(form.endTime, {'attr': {'class': 'form-control'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.courseName) }}
-                {{ form_widget(form.courseName, {'attr': {'class': 'form-control'}}) }}
-            </div>
-            <div class="form-group">
-                {{ form_label(form.instructor) }}
-                {{ form_widget(form.instructor, {'attr': {'class': 'form-control'}}) }}
-            </div>
+					{{ form_start(form) }}
+					<div class="form-group">
+						{{ form_label(form.day) }}
+						{{ form_widget(form.day, {'attr': {'class': 'form-control'}}) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.startTime) }}
+						{{ form_widget(form.startTime, {'attr': {'class': 'form-control'}}) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.endTime) }}
+						{{ form_widget(form.endTime, {'attr': {'class': 'form-control'}}) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.courseName) }}
+						{{ form_widget(form.courseName, {'attr': {'class': 'form-control'}}) }}
+					</div>
+					<div class="form-group">
+						{{ form_label(form.instructor) }}
+						{{ form_widget(form.instructor, {'attr': {'class': 'form-control'}}) }}
+					</div>
 
-            <button type="submit" class="btn btn-primary">Enregistrer</button>
-        {{ form_end(form) }}
+					<button type="submit" class="btn btn-primary">Enregistrer</button>
+					{{ form_end(form) }}
 
-        <a href="{{ path('planning') }}" class="btn btn-secondary mt-3">Annuler</a>
-    </div>
+					<a href="{{ path('planning') }}" class="btn btn-secondary mt-3">Annuler</a>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
