ajout de webhook pour gérer les paiements en plusieurs fois sur stripe

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 40% 17%; /* Centre l'image horizontalement et la déplace vers le bas */
+    height: 100vh;
 }
 
 
