--- a/templates/plan/new.html.twig
+++ b/templates/plan/new.html.twig
@@ -17,6 +17,10 @@
 						{{ form_widget(form.duration, {'attr': {'class': 'form-control'}}) }}
 					</div>
 					<div class="form-group">
+						{{ form_label(form.maxPayments) }}
+						{{ form_widget(form.maxPayments, {'attr': {'class': 'form-control'}}) }}
+					</div>
+					<div class="form-group">
 						{{ form_label(form.stripePriceId) }}
 						{{ form_widget(form.stripePriceId, {'attr': {'class': 'form-control'}}) }}
 					</div>
