--- a/templates/plan/list.html.twig
+++ b/templates/plan/list.html.twig
@@ -17,7 +17,10 @@
 									Durée:
 									{{ plan.duration }}
 									<br>
-									ID du prix Stripe:
+									Mode de paiement :
+									{{ plan.maxPayments }}
+									<br>
+									ID du prix Stripe :
 									{{ plan.stripePriceId }}
 								</p>
 								<h6 class="mt-3">Cours inclus :</h6>
