--- a/templates/plan/list.html.twig
+++ b/templates/plan/list.html.twig
@@ -14,14 +14,13 @@
 							<div class="list-group-item mb-3">
 								<h5 class="mb-1">{{ plan.name }}</h5>
 								<p class="mb-1">
-									Durée:
-									{{ plan.duration }}
+									Date de début : {{ plan.startDate|date('d/m/Y') }}
 									<br>
-									Mode de paiement :
-									{{ plan.maxPayments }}
+									Date de fin : {{ plan.endDate|date('d/m/Y') }}
 									<br>
-									ID du prix Stripe :
-									{{ plan.stripePriceId }}
+									Mode de paiement : {{ plan.maxPayments }}
+									<br>
+									ID du prix Stripe : {{ plan.stripePriceId }}
 								</p>
 								<h6 class="mt-3">Cours inclus :</h6>
 								<ul class="list-group mb-3">
