--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Planning
-{% endblock %}
+{% block title %}Planning{% endblock %}
 
 {% block body %}
 	<div class="container planning">
@@ -26,15 +25,16 @@
 					</thead>
 					<tbody>
 						{% set weekday_timeslots = [
-                        '14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30', '18:00', '18:30', '19:00',
-                        '19:30', '20:00', '20:30', '21:00'
-                    ] %}
+							'14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30', '18:00', '18:30', 
+							'19:00', '19:15', '19:30', '19:45', '20:00', '20:15', '20:30'
+						] %}
 
 						{% set merged_slots = {} %}
 
 						{% for timeslot in weekday_timeslots %}
 							<tr>
-								<td>{{ timeslot }}</td>
+								{% set interval = (timeslot >= '19:00') ? 15 : 30 %}
+								<td>{{ timeslot }} - {{ timeslot|date_modify('+' ~ interval ~ ' minutes')|date('H:i') }}</td>
 								{% for dow in ['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi'] %}
 									{% set key = dow ~ '-' ~ timeslot %}
 									{% if merged_slots[key] is not defined %}
@@ -43,7 +43,7 @@
 											{% set start_time = schedule.startTime|date('H:i') %}
 											{% set end_time = schedule.endTime|date('H:i') %}
 											{% set start_slot = timeslot %}
-											{% set duration = (schedule.endTime|date('U') - schedule.startTime|date('U')) // 1800 %}
+											{% set duration = (schedule.endTime|date('U') - schedule.startTime|date('U')) // (interval * 60) %}
 											{% set slots_covered = duration - 1 %}
 
 											{% if schedule.day == dow and start_time == start_slot %}
@@ -61,10 +61,8 @@
 												{% endif %}
 												<td class="{{ class_name }}" rowspan="{{ duration }}">
 													{{ schedule.courseName }}
-                                                    <br>
-													({{ schedule.startTime|date('H:i') }}
-													-
-													{{ schedule.endTime|date('H:i') }})
+													<br>
+													({{ schedule.startTime|date('H:i') }} - {{ schedule.endTime|date('H:i') }})
 													{% if is_granted('ROLE_ADMIN') %}
 														<br>
 														<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn btn-secondary btn-sm mt-1">Modifier</a>
@@ -73,7 +71,7 @@
 												</td>
 												{% set course_found = true %}
 												{% for i in 0..slots_covered %}
-													{% set merged_key = dow ~ '-' ~ (timeslot|date_modify('+' ~ (i * 30) ~ ' minutes')|date('H:i')) %}
+													{% set merged_key = dow ~ '-' ~ (timeslot|date_modify('+' ~ (i * interval) ~ ' minutes')|date('H:i')) %}
 													{% set merged_slots = merged_slots|merge({ (merged_key): true }) %}
 												{% endfor %}
 											{% endif %}
@@ -99,12 +97,12 @@
 					</thead>
 					<tbody>
 						{% set saturday_timeslots = [
-                            '09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00'
-                        ] %}
+							'09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00'
+						] %}
 
 						{% for timeslot in saturday_timeslots %}
 							<tr>
-								<td>{{ timeslot }}</td>
+								<td>{{ timeslot }} - {{ timeslot|date_modify('+30 minutes')|date('H:i') }}</td>
 								{% set key = 'Samedi-' ~ timeslot %}
 								{% if merged_slots[key] is not defined %}
 									{% set course_found = false %}
@@ -130,10 +128,8 @@
 											{% endif %}
 											<td class="{{ class_name }}" rowspan="{{ duration }}">
 												{{ schedule.courseName }}
-                                                <br>
-												({{ schedule.startTime|date('H:i') }}
-												-
-												{{ schedule.endTime|date('H:i') }})
+												<br>
+												({{ schedule.startTime|date('H:i') }} - {{ schedule.endTime|date('H:i') }})
 												{% if is_granted('ROLE_ADMIN') %}
 													<br>
 													<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn btn-secondary btn-sm">Modifier</a>
