--- a/templates/user/subscription.html.twig
+++ b/templates/user/subscription.html.twig
@@ -7,6 +7,8 @@
 			{% set allSubscriptionsEmpty = true %}
 			{% for subscription in subscriptions %}
 				{% set hasCredits = false %}
+				{% set isExpired = subscription.expiryDate < date() %}
+
 				{% for subscriptionCourse in subscription.subscriptionCourses %}
 					{% if subscriptionCourse.remainingCredits > 0 %}
 						{% set hasCredits = true %}
@@ -26,13 +28,15 @@
 							</li>
 						{% endfor %}
 					</ul>
-					<p class="mb-1">Date d'expiration:
+					<p class="mb-1">Date d'expiration :
 						{{ subscription.expiryDate|date('d-m-Y') }}</p>
-					<p class="mb-1">Mode de paiement:
+					<p class="mb-1">Mode de paiement :
 						{{ subscription.paymentMode }}</p>
-					{% if hasCredits %}
+
+					{% if isExpired %}
+						<p class="text-danger">Ce forfait a expiré.</p>
+					{% elseif hasCredits %}
 						<a href="{{ path('calendar') }}" class="btn btn-primary btn-sm">Réserver</a>
-						<a class="btn btn-success btn-sm" href="{{ path('subscription_new') }}" class="btn btn-success btn-sm">Acheter un nouveau forfait</a>
 					{% else %}
 						<p class="text-danger">Pas de crédits restants</p>
 					{% endif %}
@@ -43,8 +47,8 @@
 				<div class="alert alert-warning mt-3" role="alert">
 					Vous n'avez aucun crédit restant sur vos forfaits.
 				</div>
-				<a href="{{ path('subscription_new') }}" class="btn btn-success btn-sm">Acheter un nouveau forfait</a>
 			{% endif %}
+			<a href="{{ path('subscription_new') }}" class="btn btn-success btn-sm">Acheter un nouveau forfait</a>
 		</div>
 	</div>
 {% endblock %}
