--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -48,7 +48,7 @@
 
 											{% if schedule.day == dow and start_time == start_slot %}
 												{% set class_name = '' %}
-												{% if schedule.courseName == 'Yoga Aérien' %}
+												{% if schedule.courseName == 'Yoga aérien' %}
 													{% set class_name = 'bg-yoga-aerien' %}
 												{% elseif schedule.courseName == 'Pole Dance' %}
 													{% set class_name = 'bg-pole-dance' %}
