--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -56,7 +56,7 @@
 													{% set class_name = 'bg-hammock' %}
 												{% elseif schedule.courseName == 'Souplesse' %}
 													{% set class_name = 'bg-souplesse' %}
-												{% elseif schedule.courseName == 'Cours à la demande' %}
+												{% elseif schedule.courseName == 'Cours à la demande Particulier / Essais /Coaching' %}
 													{% set class_name = 'bg-cours-demande' %}
 												{% endif %}
 												<td class="{{ class_name }}" rowspan="{{ duration }}">
