--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -54,7 +54,7 @@
 													{% set class_name = 'bg-pole-dance' %}
 												{% elseif schedule.courseName == 'Hammock' %}
 													{% set class_name = 'bg-hammock' %}
-												{% elseif schedule.courseName == 'Souplesse' %}
+												{% elseif schedule.courseName == 'Souplesse/ Renfo' %}
 													{% set class_name = 'bg-souplesse' %}
 												{% elseif schedule.courseName == 'Cours à la demande Particulier / Essais /Coaching' %}
 													{% set class_name = 'bg-cours-demande' %}
