--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -88,7 +88,7 @@ th, td {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 th {
