--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
+	<div class="container calendrier">
 		<h1>Calendrier des Cours</h1>
 		{% for label, messages in app.flashes %}
 			{% for message in messages %}
@@ -113,21 +113,19 @@
 															{% else %}
 																<span class="btn btn-danger">Complet</span>
 															{% endif %}
-															<span class="btn btn-success btn-sm text-uppercase mt-2">Réservé</span>
+															<p class="btn btn-success btn-sm text-uppercase">Réservé</p>
 															{% if interval_until_course >= 6 %}
-																<br>
-																<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn btn-danger btn-sm mt-2">Annuler</a>
+																<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn btn-danger btn-sm ">Annuler</a>
 															{% else %}
-																<br>
-																<button class="btn btn-secondary btn-sm mt-2" disabled>Annulation impossible</button>
+																<button class="btn btn-secondary btn-sm" disabled>Annulation impossible</button>
 															{% endif %}
 														{% else %}
 															{% if available_spots > 0 %}
-																<p class="mt-3">
+																<p>
 																	{{ course_capacity - bookings_count }}
 																	places restantes
 																</p>
-																<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn btn-primary btn-sm mt-2">Réserver</a>
+																<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn btn-primary btn-sm">Réserver</a>
 															{% else %}
 																<span class="badge badge-danger">Complet</span>
 															{% endif %}
@@ -217,11 +215,11 @@
 													</a>
 													<br>
 													{% if user_booking %}
-														<span class="btn btn-success btn-sm mt-2">Réservé</span>
+														<p class="btn btn-success btn-sm">Réservé</p>
 														{% if interval_until_course >= 6 %}
 															<a href="{{ path('booking_cancel', { 'bookingId': user_booking.id }) }}" class="btn btn-danger btn-sm">Annuler</a>
 														{% else %}
-															<button class="btn btn-secondary btn-sm mt-2" disabled>Annulation impossible</button>
+															<button class="btn btn-secondary btn-sm" disabled>Annulation impossible</button>
 														{% endif %}
 													{% else %}
 														{% if available_spots > 0 %}
@@ -232,11 +230,11 @@
 															</p>
 															<a href="{{ path('booking_new', { 'courseId': course.id }) }}" class="btn btn-primary btn-sm">Réserver</a>
 														{% else %}
-															<span class="btn btn-danger mt-2">Complet</span>
+															<p class="btn btn-danger">Complet</p>
 														{% endif %}
 													{% endif %}
 													{% if is_granted('ROLE_ADMIN') %}
-														<div class="mt-2">
+														<div>
 															<a href="{{ path('course_edit', { 'id': course.id }) }}" class="btn btn-warning btn-sm">Modifier</a>
 															<form action="{{ path('admin_course_cancel', { 'courseId': course.id }) }}" method="POST" class="d-inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">
 																<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ course.id) }}">
